--- a/html_shopping_cart/style.css
+++ b/html_shopping_cart/style.css
@@ -1,5 +1,22 @@
+@font-face {
+    font-display: swap;
+    font-family: Noto IKEA;
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://www.ikea.com/global/assets/fonts/woff2/noto-ikea-400.latin.5a052965.woff2) format("woff2");
+    unicode-range: u+00??,u+0131,u+0152-0153,u+02bb-02bc,u+02c6,u+02da,u+02dc,u+0304,u+0308,u+0329,u+2000-206f,u+2074,u+20ac,u+2122,u+2191,u+2193,u+2212,u+2215,u+feff,u+fffd
+}
+@font-face {
+    font-display: swap;
+    font-family: Noto IKEA;
+    font-style: normal;
+    font-weight: 700;
+    src: url(https://www.ikea.com/global/assets/fonts/woff2/noto-ikea-700.latin.a3f10ed8.woff2) format("woff2");
+    unicode-range: u+00??,u+0131,u+0152-0153,u+02bb-02bc,u+02c6,u+02da,u+02dc,u+0304,u+0308,u+0329,u+2000-206f,u+2074,u+20ac,u+2122,u+2191,u+2193,u+2212,u+2215,u+feff,u+fffd
+}
 p, h2{
     color:white;
+    font-family:  "Noto IKEA";
 }
 .products{
     display: grid;
@@ -11,15 +28,50 @@ p, h2{
     flex-direction: column;
     background-color: #2a2a2a;
     padding: 1em;
-    box-shadow: 5px 5px 5px #13131376;
+    box-shadow: 0 4px 4px 4px hsla(0, 0%, 0%, 0.2);
     padding: 10px 20px 40px 20px;
     border-radius: 16px;
 }
 .product__img{
     width: 100%;
     background-color: rgb(224, 125, 90);
-    box-shadow: 5px 5px 5px black;
+    box-shadow: 0 4px 4px 4px hsla(0, 0%, 0%, 0.2);
+    border-radius: 8px;
+}
+.product__description{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-areas: 
+    "text text text price"
+    "line line line line"
+    "amount count btn btn";
 }
 .product__text{
-    flex-grow: 1;
+    grid-area: text;
+}
+.product__price{
+    grid-area: price;
+    justify-self: flex-end;
+    align-self: flex-end;
+    font-weight: 700;
+    font-size: 1.25em;
+}
+.product__count{
+    justify-self: center;
+    font-size: 1.25em;
+    border-bottom: 2px solid white;
+}
+.divider__line{
+    width: 100%; 
+    border: none; 
+    height: 1px; 
+    background-color: hsla(100, 100%, 100%, 0.1);
+    grid-area: line;
+}
+button{
+    background-color: #2a2a2a;
+    width: fit-content;
+    height: fit-content;
+    justify-self: center;
+    align-self: center;
 }
