--- a/html_shopping_cart/style.css
+++ b/html_shopping_cart/style.css
@@ -14,9 +14,11 @@
     src: url(https://www.ikea.com/global/assets/fonts/woff2/noto-ikea-700.latin.a3f10ed8.woff2) format("woff2");
     unicode-range: u+00??,u+0131,u+0152-0153,u+02bb-02bc,u+02c6,u+02da,u+02dc,u+0304,u+0308,u+0329,u+2000-206f,u+2074,u+20ac,u+2122,u+2191,u+2193,u+2212,u+2215,u+feff,u+fffd
 }
-p, h2{
+*{
+    font-family: "Noto IKEA";
+}
+p, h2, button{
     color:white;
-    font-family:  "Noto IKEA";
 }
 .products{
     display: grid;
@@ -58,7 +60,7 @@ p, h2{
 }
 .product__count{
     justify-self: center;
-    font-size: 1.25em;
+    align-self: flex-start;
     border-bottom: 2px solid white;
 }
 .divider__line{
