--- a/html_shopping_cart/style.css
+++ b/html_shopping_cart/style.css
@@ -17,7 +17,10 @@
 *{
     font-family: "Noto IKEA";
 }
-p, h2, button{
+body{
+    background-color: #000;
+}
+p, h2, h3, button{
     color:white;
 }
 .products{
@@ -46,7 +49,7 @@ p, h2, button{
     grid-template-areas: 
     "text text text price"
     "line line line line"
-    "amount count btn btn"
+    "amount amount btn btn"
     "input input send send";
 }
 .product__text{
@@ -59,10 +62,12 @@ p, h2, button{
     font-weight: 700;
     font-size: 1.25em;
 }
+.product__amount{
+    grid-area: amount;
+}
 .product__count{
-    justify-self: center;
-    align-self: flex-start;
     border-bottom: 2px solid white;
+    font-weight: 700;
 }
 .divider__line{
     width: 100%; 
