--- a/style.css
+++ b/style.css
@@ -2,11 +2,15 @@ body{
     background-color: #000;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-p, h2, h3, button{
+p, h2, h3, h4, button{
     color:white;
+}
+h4{
+    margin: 0.25em;
 }
 button{
     background-color: #2a2a2a;
+    margin: 4px;
 }
 .product__imageContainer{
     position: relative;
@@ -22,4 +26,8 @@ button{
     padding: 5px 10px;
     border-radius: 8px;
     display: none;
+}
+.product__color, .product__size{
+    display: flex;
+    max-width: 218px;
 }
