--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
 body{
     background-color: #000;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-p, h1, h2, h3, button{
     color:white;
+}
+.status{
+    margin-block: 1em;
+    display: flex;
+    justify-content: center;
+}
+.status__input{
+    margin-inline: 0.5em;
+    width: 16px;
+    height: 16px;
 }
 .products{
     display: grid;
@@ -18,6 +26,17 @@ p, h1, h2, h3, button{
     box-shadow: 0 4px 4px 4px hsla(0, 0%, 0%, 0.2);
     border-radius: 16px;
     align-items: center;
+    position: relative;
+}
+.product__status{
+    position: absolute;
+    top: 16px;
+    left: 16px;
+    background-color: hsla(0, 0%, 0%, 0.7);
+    color: white;
+    padding: 0.75em;
+    border-radius: 8px 0 8px 0;
+    font-size: 0.75em;
 }
 .product__image{
     width: 100%;
