--- a/style.css
+++ b/style.css
@@ -3,10 +3,16 @@ body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color:white;
 }
-.status{
-    margin-block: 1em;
+.sort{
     display: flex;
     justify-content: center;
+    gap: 2em;
+    margin: 1em;
+}
+#status{
+    height: 16px;
+    width: 16px;
+    margin-bottom: 0;
 }
 .status__input{
     margin-inline: 0.5em;
