--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
+body{
+    background-color: #1f1f1f;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color:white;
+}
 .gums{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 1em;
     justify-items: center;
+}
+.gum{
+    display: flex;
+    flex-direction: column;
 }
 .gum__name{
     text-align: center;
