--- a/todo_list/style.css
+++ b/todo_list/style.css
@@ -1,6 +1,15 @@
 body{
+    background-color: #1f1f1f;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color:white;
 }
 .completed{
     text-decoration: line-through;
+}
+ul{
+    padding-inline-start: 1em;
+}
+li{
+    list-style-type: none;
+
 }
