--- a/json_cart/style.css
+++ b/json_cart/style.css
@@ -1,13 +1,13 @@
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    width: 800px;
-    margin: auto;
+}
+.main{
+    display: flex;
+    justify-content: center;
 }
 .info{
-    display: flex;
-    justify-content: space-between;
     background-color: #f5f5f5;
-    width: 400px;
+    min-width: 400px;
 }
 .info__title{
     display: flex;
@@ -20,8 +20,12 @@ body{
 }
 .product{
     background-color: #fff;
-    width: 400px;
-    box-shadow: #000 4px 4px 4px;
+    box-shadow: #000 2px 2px 2px;
+}
+.product:hover{
+    background-color: #ddd;
+    cursor: pointer;
+    transition-duration: 200ms;
 }
 .product__info{
     display: flex;
@@ -30,4 +34,25 @@ body{
 .product__total,
 .description__info{
     font-weight: bold;
+}
+.description{
+    background-color: #e7e7e7;
+}
+.description__images{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 0.25em;
+}
+.description__images > img{
+    width: 150px;
+}
+.description__tag{
+    display: inline-block;
+    background-color: #f0f0f0;
+    color: #333;
+    font-size: 14px;
+    padding: 5px 12px;
+    border-radius: 20px;
+    text-transform: capitalize;
+    border: 1px solid #ccc;
 }
