--- a/json_cart/style.css
+++ b/json_cart/style.css
@@ -1,15 +1,22 @@
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
 }
-.main{
-    display: flex;
-    justify-content: center;
+.main {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    font-family: sans-serif;
+    min-height: 100vh;
 }
-.info{
+.cart{
     background-color: #f5f5f5;
-    min-width: 400px;
+    padding: 1.5em;
 }
-.info__title{
+.cart__header{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.header__title{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -18,9 +25,22 @@ ul{
     list-style: none;
     padding-inline-start: 0;
 }
+.product{
+    background-color: #e7e7e7;
+    padding: 1.5em;
+}
+.product__images img {
+    width: 100%;
+    border: 4px solid white;
+    border-radius: 5px;
+    overflow: hidden;
+}
 .product__preview{
     background-color: #fff;
     box-shadow: #00000070 2px 2px 2px;
+    padding: 0.5em;
+    margin-block: 1em;
+    border-radius: 0.5em;
 }
 .product__preview:hover{
     background-color: #ddd;
@@ -34,13 +54,10 @@ ul{
 .product__total{
     font-weight: bold;
 }
-.product{
-    background-color: #e7e7e7;
-}
 .product__images{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 0.25em;
+    gap: 1em;
 }
 .product__images > img{
     width: 150px;
